# neurousers

./: .gitignore
app/: .gitignore  Dockerfile  README.md  app.py  config.py  config.yml  dev.py  main.py  pyproject.toml
app/api/: Dockerfile  __init__.py  __main__.py  app.py  dev.py
app/api/dto/: __init__.py  user.py
app/api/routers/: admin.py  auth.py
app/dto/: user.py
app/migrations/models/: 0_20260224154651_init.py
app/models/: orm.py
app/routers/: admin.py  auth.py  partners.py
docker/dev/: compose.yml  config.yml
docker/prod/: compose.yml  config.yml
